<resources>
    <string name="app_name">Basketball League</string>
    <string name="title_home">Home</string>
    <string name="title_standings">Standings</string>
    <string name="title_matches">Matches</string>
    <string name="title_top5">Top 5</string>
    <string name="league_name">Basket League 2022</string>
    <string name="title_admin">admin</string>
    <string name="match_detail">match detail</string>
    <string name="send_button_text">send</string>

    <string name="match_detail">Match Detail</string>
    <string name="live_commentary">Live Commentary</string>
    <string name="line_up">Line up</string>
  

    <string name="start_page_title">The official\nBasket League App</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="signin_popup_title">Sign in</string>
    <string name="signup_popup_title">Sign up</string>
    <string name="signup_question">Don\'t have account?</string>
    <string name="signin_question">Already have an account?</string>
    <string name="username_placeholder">Username</string>
    <string name="password_placeholder">Password</string>
    <string name="guest_text">Continue as guest</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>