<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.basketballleague.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_standings"
        android:name="com.example.basketballleague.ui.standings.StandingsFragment"
        android:label="@string/title_standings"
        tools:layout="@layout/fragment_standings" />

    <fragment
        android:id="@+id/navigation_matches"
        android:name="com.example.basketballleague.ui.matches.MatchesFragment"
        android:label="@string/title_matches"
        tools:layout="@layout/fragment_matches" >
        <action
            android:id="@+id/action_navigation_matches_to_navigation_admin"
            app:destination="@id/navigation_admin" />
        <action
            android:id="@+id/action_navigation_matches_to_liveMatchActivity5"
            app:destination="@id/liveMatchActivity5"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/navigation_top5"
        android:name="com.example.basketballleague.ui.top5.Top5Fragment"
        android:label="@string/title_top5"
        tools:layout="@layout/fragment_top5" />

    <fragment
        android:id="@+id/navigation_admin"
        android:name="com.example.basketballleague.ui.matches.AdminFragment"
        android:label="@string/title_admin"
        tools:layout="@layout/fragment_admin" >
        <action
            android:id="@+id/action_navigation_admin_to_navigation_matches"
            app:destination="@id/navigation_matches" />
    </fragment>
    <activity
        android:id="@+id/liveMatchActivity5"
        android:name="com.example.basketballleague.ui.matches.LiveMatchActivity"
        android:label="activity_live_match"
        tools:layout="@layout/activity_live_match" />
    <fragment
        android:id="@+id/liveMatchFragment"
        android:name="com.example.basketballleague.ui.matches.LiveMatchFragment"
        android:label="fragment_live_match"
        tools:layout="@layout/fragment_live_match" >
        <action
            android:id="@+id/action_liveMatchFragment_to_navigation_matches"
            app:destination="@id/navigation_matches"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
    </fragment>
</navigation>