<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:fillViewport="false"
    android:background="#202020"
    android:scrollbarStyle="outsideOverlay"
    tools:context=".ui.login.LoginActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#202020">

        <View
            android:id="@+id/rectangle_2"
            android:layout_width="287sp"
            android:layout_height="278sp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="56dp"
            android:background="@drawable/rectangle_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


        </View>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="219sp"
            android:layout_height="619sp"
            app:layout_constraintBottom_toBottomOf="@+id/rectangle_2"
            app:layout_constraintEnd_toEndOf="@+id/rectangle_2"
            app:layout_constraintStart_toStartOf="@+id/rectangle_2"
            app:layout_constraintTop_toTopOf="@+id/rectangle_2"
            app:layout_constraintVertical_bias="0.554"
            app:srcCompat="@drawable/img_login1" />

        <TextView
            android:id="@+id/start_page_title"
            android:layout_width="253sp"
            android:layout_height="150sp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="56dp"
            android:gravity="top"
            android:lineSpacingExtra="8sp"
            android:text="@string/start_page_title"
            android:textColor="#ffffff"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.374"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rectangle_2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_signin"
            android:layout_width="185sp"
            android:layout_height="75sp"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="@color/orangeForeground"
            android:outlineProvider="none"
            android:text="@string/sign_in"
            android:textColor="#FFFFFF"
            app:cornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.182"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/start_page_title" />

        <TextView
            android:id="@+id/txt_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.48"
            app:layout_constraintStart_toEndOf="@+id/btn_signin"
            app:layout_constraintTop_toBottomOf="@+id/start_page_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>