<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.matches.LiveMatchFragment">


    <ImageView
        android:id="@+id/firstTeam"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="108dp"
        android:background="@drawable/ic_teams_template"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/secondTeam"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="44dp"
        android:background="@drawable/ic_teams_template"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <TextView
        android:id="@+id/teamName1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:text="TextView"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstTeam" />

    <TextView
        android:id="@+id/teamName2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="45dp"
        android:text="TextView"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/secondTeam" />

    <TextView
        android:id="@+id/teamPoints1"
        android:layout_width="27dp"
        android:layout_height="27dp"
        android:layout_marginTop="125dp"
        android:text="TextView"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/score"
        app:layout_constraintStart_toEndOf="@+id/firstTeam"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/teamPoints2"
        android:layout_width="27dp"
        android:layout_height="27dp"
        android:layout_marginTop="124dp"
        android:text="TextView"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/secondTeam"
        app:layout_constraintStart_toEndOf="@+id/score"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="132dp"
        android:text="-"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="Basket League 2022"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:text="time"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/score" />



    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="256dp"
        android:background="@color/backgroundColor"
        app:layout_constraintTop_toTopOf="parent"
        app:tabTextColor="@color/white"
        tools:layout_editor_absoluteX="52dp">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:text="@string/match_detail"
            android:textColor="@color/white" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:text="@string/live_commentary"
            android:textColor="@color/white" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:text="@string/line_up"
            android:textColor="@color/white" />



    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout"
        tools:ignore="SpeakableTextPresentCheck"
        tools:layout_editor_absoluteX="0dp">

    </androidx.viewpager.widget.ViewPager>

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Button"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/firstTeam"
        app:layout_constraintEnd_toStartOf="@+id/pageTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>