<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/firstTeam"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="108dp"
        android:background="@drawable/ic_teams_template"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/secondTeam"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="44dp"
        android:background="@drawable/ic_teams_template"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/teamName1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:text="TextView"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstTeam" />

    <TextView
        android:id="@+id/teamName2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="45dp"
        android:text="TextView"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/secondTeam" />

    <TextView
        android:id="@+id/teamPoints1"
        android:layout_width="27dp"
        android:layout_height="27dp"
        android:layout_marginTop="125dp"
        android:text="TextView"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/score"
        app:layout_constraintStart_toEndOf="@+id/firstTeam"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/teamPoints2"
        android:layout_width="27dp"
        android:layout_height="27dp"
        android:layout_marginTop="124dp"
        android:text="TextView"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/secondTeam"
        app:layout_constraintStart_toEndOf="@+id/score"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="132dp"
        android:text="-"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="Basket League 2022"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="52dp"
        android:text="b"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:text="time"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/score" />


    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="411dp"
        android:layout_height="488dp"
        android:layout_marginTop="64dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView14">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            app:tabBackground="@color/backgroundColor"
            app:tabContentStart="0dp"
            app:tabMode="fixed"
            app:tabSelectedTextColor="@color/orangeForeground"
            app:tabTextAppearance="@style/NormalText"
            app:tabTextColor="@color/white">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/txtViewMatchDetail"
                android:layout_width="115dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/match_detail" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/txtViewLiveComm"
                android:layout_width="147dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/live_commentary"
                android:textColor="#FFFFFF" />


            <com.google.android.material.tabs.TabItem
                android:id="@+id/txtViewLineUp"
                android:layout_width="86dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/line_up"
                android:textColor="#FFFFFF"

                />
        </com.google.android.material.tabs.TabLayout>
    </androidx.viewpager.widget.ViewPager>


</androidx.constraintlayout.widget.ConstraintLayout>